more OpenGraph changes

--- a/index.ejs
+++ b/index.ejs
@@ -14,10 +14,12 @@
     <meta name="theme-color" content="#00639a" />
 
     <!-- Open Graph (OG) tags for Facebook, WhatsApp, LinkedIn, Slack, Discord, and more -->
+    <meta property="og:logo" content="https://www.uniprot.org/android-chrome-512x512.png" />
     <meta property="og:title" content="UniProt" />
     <meta property="og:description" content="UniProt is the world's leading high-quality, comprehensive and freely accessible resource of protein sequence and functional information." />
     <meta property="og:image" content="https://www.uniprot.org/og-uniprot-wide-logo-1200x630.png" />
-    <meta property="og:url" content="https://www.uniprot.org/" />
+    <!-- Below needs to be the canonical of each page -->
+    <!-- <meta property="og:url" content="https://www.uniprot.org/" /> -->
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="UniProt" />
 
