change fallback message of index.ejs to only display JS item through <noscript> tag

--- a/index.ejs
+++ b/index.ejs
@@ -188,11 +188,13 @@
           If you are not seeing anything on this page, it might be for multiple
           reasons:
           <ul>
-            <li>
-              <strong>You might have JavaScript disabled</strong>: make sure to
-              enable JavaScript on your browser, or use a browser that supports
-              JavaScript.
-            </li>
+            <noscript>
+              <li>
+                <strong>You might have JavaScript disabled</strong>: make sure
+                to enable JavaScript on your browser, or use a browser that
+                supports JavaScript.
+              </li>
+            </noscript>
             <li>
               <strong>You might have an outdated browser</strong>: make sure
               that your browser is up to date as older versions might not work
