Remove old protvista-structure related style from app.scss

--- a/src/app/components/styles/app.scss
+++ b/src/app/components/styles/app.scss
@@ -47,21 +47,12 @@
   }
 }
 
-protvista-manager {
-  &:hover,
-  &:focus-within {
-    & path.rectangle.feature {
-      stroke: gray;
-    }
-  }
-}
-
 table {
   border-collapse: collapse;
 }
 
 // TODO: remove as part of TRM-26871
-.protvista-uniprot-structure__structure protvista-structure {
+.protvista-uniprot-structure__structure nightingale-structure {
   z-index: 10 !important;
 
   & .msp-viewport-controls {
