--- a/src/shared/components/table/styles/table.module.scss
+++ b/src/shared/components/table/styles/table.module.scss
@@ -43,7 +43,7 @@
 
   & th {
     text-align: left;
-    vertical-align: middle;
+    vertical-align: var(--table-header-vertical-align, middle);
     background-color: var(--table__header-background);
     color: var(--table__header-text);
     text-overflow: ellipsis;
