Use default cursor for table headers.

--- a/src/shared/components/table/styles/table.module.scss
+++ b/src/shared/components/table/styles/table.module.scss
@@ -48,6 +48,7 @@
     color: var(--table__header-text);
     text-overflow: ellipsis;
     text-transform: uppercase;
+    cursor: default;
   }
 
   & td,
