improve style of genomic coordinates tables for small screens

--- a/src/uniprotkb/components/entry/tabs/genomic-coordinates/styles/coordinates-table.module.scss
+++ b/src/uniprotkb/components/entry/tabs/genomic-coordinates/styles/coordinates-table.module.scss
@@ -1,3 +1,7 @@
+.table-container {
+  overflow-y: auto;
+}
+
 .coordinates-table {
   /* | <whitespace> | <no data line> | <whitespace>      | <whitespace> | */
   /* | <whitespace> | <whitespace>   | <single position> | <whitespace> | */
