Put method counts at the start and add methods as second label above.

--- a/src/uniprotkb/components/entry/styles/agr-orthology.module.scss
+++ b/src/uniprotkb/components/entry/styles/agr-orthology.module.scss
@@ -10,38 +10,61 @@
   --table-header-vertical-align: bottom;
 
   // Columns 6 to 15 are the methods
-  th:nth-child(n + 7):nth-child(-n + 15),
-  td:nth-child(n + 7):nth-child(-n + 15) {
-    padding: 0 4px;
+  th:nth-child(n + 8):nth-child(-n + 17),
+  td:nth-child(n + 8):nth-child(-n + 17) {
+    padding: 0 5px;
+    width: 1ch;
+  }
+  // Columns 6 to 15 are the methods
+  td:nth-child(n + 8):nth-child(-n + 17) {
+    font-family: monospace;
+  }
+  th:nth-child(7),
+  td:nth-child(7) {
+    padding-right: 0px;
+    padding-left: 20px;
   }
 
-  .match-count-label {
-    transform: translate(-50px, 100px) rotate(315deg) !important;
-    text-decoration: underline;
+  th:nth-child(8),
+  td:nth-child(8) {
+    padding-left: 0px;
   }
 
-  .methods-label {
+  .methods-label-container {
+    position: relative;
+
+    .methods-label {
+      position: absolute;
+      top: -100px;
+      // left: 20px;
+    }
+
+    .method-match-count-label > span {
+      white-space: nowrap;
+      text-decoration: underline;
+      transform: translate(5px, -25px) rotate(315deg);
+      width: 7ch;
+    }
+  }
+
+  .method-match-count-render {
+    cursor: default;
+  }
+
+  .method-label {
     white-space: nowrap;
     height: 145px;
-    padding: 10px;
-    left: -5px;
-    position: relative;
     width: 1ch;
 
     & > span {
-      display: inline-block;
-      transform: translate(-3px, 107px) rotate(315deg);
+      transform: translate(0px, 117px) rotate(315deg);
       width: 1ch;
     }
   }
 
-  .match-count {
-    padding-left: 30px;
-    font-size: 1em !important;
-  }
-
-  .methods-render {
+  .method-render {
     font-size: 1.5rem;
     cursor: default;
+    width: 1ch;
   }
 }
