Don't uppercase homology methods in table header.

--- a/src/uniprotkb/components/entry/similar-proteins/styles/agr-homology.module.scss
+++ b/src/uniprotkb/components/entry/similar-proteins/styles/agr-homology.module.scss
@@ -64,6 +64,7 @@
   .method-label {
     white-space: nowrap;
     height: 145px;
+    text-transform: none;
 
     & > span {
       transform: translate(0px, 117px) rotate(315deg);
