fix xref form on the supporting data page

--- a/src/contact/components/styles/contact-form.module.scss
+++ b/src/contact/components/styles/contact-form.module.scss
@@ -58,7 +58,7 @@
         'submit        submit        .             .';
     }
 
-    // Hide the honeypot from the view
+    // Hide the honeypot from the view, but not from the bots
     [name='requiredForRobots'] {
       position: absolute;
       top: -100%;
