--- a/src/uniprotkb/components/protein-data-views/styles/catalytic-activity-view.module.scss
+++ b/src/uniprotkb/components/protein-data-views/styles/catalytic-activity-view.module.scss
@@ -16,8 +16,9 @@
 
       svg {
         position: relative;
-        top: -0.6rem;
+        top: 2px;
         margin-left: 0.5rem;
+        width: 0.7rem;
       }
     }
   }
