Initial attempt at showing download and view in uniparc choices.

--- a/src/jobs/id-mapping/components/results/styles/id-mapping-result-table.module.scss
+++ b/src/jobs/id-mapping/components/results/styles/id-mapping-result-table.module.scss
@@ -2,7 +2,11 @@
   .expandable-list {
     margin-inline-start: 1em;
   }
-  .uniparc-link {
+  .uniparc-download {
     margin-left: 1em;
+  }
+  .uniparc-link {
+    position: relative;
+    top: 3px;
   }
 }
