Tweak button style.

--- a/src/jobs/id-mapping/components/results/styles/id-mapping-result-table.module.scss
+++ b/src/jobs/id-mapping/components/results/styles/id-mapping-result-table.module.scss
@@ -3,6 +3,11 @@
     margin-inline-start: 1em;
   }
 
+  button {
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
+  }
+
   .uniparc-button-group {
     margin-left: 1em;
     margin-bottom: 0;
