update contact form

--- a/src/contact/components/styles/contact-form.module.scss
+++ b/src/contact/components/styles/contact-form.module.scss
@@ -20,7 +20,7 @@
       'label-name    input-name'
       'label-email   input-email'
       'label-subject input-subject'
-      'label-message .'
+      'label-message label-message'
       'input-message input-message'
       'suggestion    suggestion'
       'label-context label-context'
@@ -34,9 +34,9 @@
         'label-name    input-name    aside'
         'label-email   input-email   aside'
         'label-subject input-subject aside'
-        'label-message .             aside'
+        'label-message label-message label-message'
         'input-message input-message input-message'
-        'suggestion    suggestion   suggestion'
+        'suggestion    suggestion    suggestion'
         'label-context label-context label-context'
         'context       context       context'
         'privacy       privacy       privacy'
@@ -46,10 +46,10 @@
     @include fs-breakpoints('large') {
       grid-template-columns: [label-start] min-content [label-end input-start] 2fr [input-end] 0.5fr max-content;
       grid-template-areas:
-        'label-name    input-name     . aside'
-        'label-email   input-email    . aside'
-        'label-subject input-subject  . aside'
-        'label-message .              . aside'
+        'label-name    input-name    .             aside'
+        'label-email   input-email   .             aside'
+        'label-subject input-subject .             aside'
+        'label-message label-message label-message label-message'
         'input-message input-message input-message input-message'
         'suggestion    suggestion    suggestion    suggestion'
         'label-context label-context label-context label-context'
