--- a/src/uniparc/components/sub-entry/styles/sub-entry.module.scss
+++ b/src/uniparc/components/sub-entry/styles/sub-entry.module.scss
@@ -7,8 +7,8 @@
   line-height: 0.2rem;
 }
 
-.availability-checkbox {
-  opacity: 0.5;
+.availability-label-disabled {
+  color: #5f5757f7;
 }
 
 .run-unifire-button {
