Add banner to help results.

--- a/src/shared/components/styles/ref-prot-move-messages.module.scss
+++ b/src/shared/components/styles/ref-prot-move-messages.module.scss
@@ -20,11 +20,16 @@ ul.retained {
   margin-bottom: 2rem;
 }
 
-.help {
+.help-landing-page {
   margin-bottom: -1.5rem;
   margin-top: 1rem;
 }
 
 .help-entry {
   margin-top: 1rem;
+}
+
+.help-results {
+  margin-top: 1rem;
+  margin-bottom: -4rem;
 }
