Update uniprotkb entry to be removed.

--- a/src/shared/components/styles/ref-prot-move-messages.module.scss
+++ b/src/shared/components/styles/ref-prot-move-messages.module.scss
@@ -15,6 +15,13 @@
 ul.retained {
   margin-bottom: 0;
 }
+ul.retained {
+  margin-bottom: 0;
+}
+
+.generic {
+  margin-top: 1rem;
+}
 
 .homepage {
   margin-bottom: 2rem;
