Update message on proteomes to be removed.

--- a/src/shared/components/styles/ref-prot-move-messages.module.scss
+++ b/src/shared/components/styles/ref-prot-move-messages.module.scss
@@ -15,8 +15,8 @@
 ul.retained {
   margin-bottom: 0;
 }
-ul.retained {
-  margin-bottom: 0;
+ul.retained-proteomes {
+  margin-bottom: 0.5rem;
 }
 
 .generic {
