More CSS improvements in context info

--- a/src/uniparc/components/sub-entry/styles/sub-entry-context.module.scss
+++ b/src/uniparc/components/sub-entry/styles/sub-entry-context.module.scss
@@ -18,6 +18,10 @@
   align-items: center;
 }
 
+.predictions-status {
+  margin-top: 1rem;
+}
+
 .success-icon {
   color: $colour-success;
   vertical-align: middle;
