--- a/src/uniparc/components/sub-entry/styles/sub-entry-context.module.css
+++ b/src/uniparc/components/sub-entry/styles/sub-entry-context.module.css
@@ -1,5 +1,3 @@
-@import 'franklin-sites/src/styles/colours';
-
 .unifire-info {
   background-color: #e9f5f1;
 }
@@ -21,14 +19,15 @@
   margin-top: 1rem;
 }
 
-.success-icon {
-  color: $colour-success;
+.icon {
   vertical-align: middle;
   margin-right: 0.5em;
-}
 
-.info-icon {
-  color: $colour-info;
-  vertical-align: middle;
-  margin-right: 0.5em;
+  &.success {
+    color: var(--fr--color-success);
+  }
+
+  &.info {
+    color: var(--fr--color-info);
+  }
 }
