--- a/src/help/components/landing/styles/help-landing-page.module.scss
+++ b/src/help/components/landing/styles/help-landing-page.module.scss
@@ -4,16 +4,16 @@
 .help-landing {
   &__tiles {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, minmax(0, 1fr));
 
     // Neither small nor medium
     @media only screen and (max-width: 930px) and (min-width: 640px) {
-      grid-template-columns: repeat(2, 1fr);
+      grid-template-columns: repeat(2, minmax(0, 1fr));
     }
 
     // Small screen
     @media only screen and (max-width: 640px) {
-      grid-template-columns: repeat(1, 1fr);
+      grid-template-columns: repeat(1, minmax(0, 1fr));
     }
 
     grid-template-rows: repeat(2, 1fr);
