Initial attempt at styling subcellular locations with ai-annotation.

--- a/src/uniprotkb/components/protein-data-views/styles/sub-cell-viz.scss
+++ b/src/uniprotkb/components/protein-data-views/styles/sub-cell-viz.scss
@@ -23,4 +23,13 @@
       color: white;
     }
   }
+
+  &.ai-annotation.lookedAt,
+  &.ai-annotation:hover {
+    background-color: color-mix(
+      in srgb,
+      var(--fr--color-purple-mid) 20%,
+      white
+    );
+  }
 }
