--- a/src/uniprotkb/components/protein-data-views/styles/go-cam-viz.module.scss
+++ b/src/uniprotkb/components/protein-data-views/styles/go-cam-viz.module.scss
@@ -1,7 +1,7 @@
 .go-cam-viz-container {
   margin-bottom: 0.25rem;
 
-  wc-gocam-viz {
+  go-gocam-viewer {
     font-size: 1rem;
 
     &::part(activities-panel) {
