--- a/src/jobs/dashboard/components/styles/Dashboard.scss
+++ b/src/jobs/dashboard/components/styles/Dashboard.scss
@@ -39,7 +39,11 @@
       & .dashboard__body__status {
         color: $colour-failure;
 
-        & .dashboard__body__notify_message,
+        & .dashboard__body__notify_message {
+          color: initial;
+          display: inline-block;
+          margin-bottom: 0.5em;
+        }
         & .dashboard__body__contact_link {
           color: initial;
         }
