Initial styling of subcell viz depending on evidence type.

--- a/src/uniprotkb/components/protein-data-views/styles/sub-cell-viz.scss
+++ b/src/uniprotkb/components/protein-data-views/styles/sub-cell-viz.scss
@@ -24,8 +24,8 @@
     }
   }
 
-  &.ai-annotation.lookedAt,
-  &.ai-annotation:hover {
+  &ai.lookedAt,
+  &ai:hover {
     background-color: color-mix(
       in srgb,
       var(--fr--color-purple-mid) 20%,
