--- a/src/shared/components/entry/styles/taxonomy-view.module.css
+++ b/src/shared/components/entry/styles/taxonomy-view.module.css
@@ -1,4 +1,5 @@
 .hidden-taxon {
   /* Can't go too light because the background is grey already */
-  color: darkslategray;
+  /* color: darkslategray; */
+  color: #9d9d9d;
 }
