Create and use hasProtNLM2Evidence fn. Fix keyword highlighting.

--- a/src/uniprotkb/components/entry/styles/protnlm.scss
+++ b/src/uniprotkb/components/entry/styles/protnlm.scss
@@ -16,3 +16,7 @@
 .ai-annotation:not(.decorated-list-item .ai-annotation) {
   @include ai-background;
 }
+
+.ai-annotation-keyword {
+  @include ai-background;
+}
