Style GO rows which have protnlm evidence; cleanup protnlm stylesheet.

--- a/src/uniprotkb/components/entry/styles/protnlm.scss
+++ b/src/uniprotkb/components/entry/styles/protnlm.scss
@@ -1,22 +1,14 @@
-// Specify the color here for now, eventually will be imported from Franklin
 :root {
-  --fr--color-purple-mid: #691eaa;
+  --ai-color: color-mix(in srgb, var(--fr--color-purple-mid) 6%, white);
 }
-
-@mixin ai-background {
-  background-color: color-mix(in srgb, var(--fr--color-purple-mid) 6%, white);
+.decorated-list-item:has(.ai-annotation),
+.ai-annotation:not(.decorated-list-item .ai-annotation),
+.ai-annotation-keyword {
+  background-color: var(--ai-color);
   padding: 0.5rem;
   margin-top: 0.5rem;
 }
 
-.decorated-list-item:has(.ai-annotation) {
-  @include ai-background;
-}
-
-.ai-annotation:not(.decorated-list-item .ai-annotation) {
-  @include ai-background;
-}
-
-.ai-annotation-keyword {
-  @include ai-background;
+tr:has(.ai-annotation-row) {
+  background-color: var(--ai-color) !important;
 }
